[package]
edition = "2021"
name = "lapce-thrift"
version = "0.0.3"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]
# plugin deps

# for unpacking zip
# zip = { version = "0.6", default-features = false, features = ["deflate"] }

# for unpacking tar/gz
# flate2 = { version = "1.0" }

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git", rev="1657b855016c6bb" }

[target.'cfg(target_os = "wasi")'.dependencies.volt]
package = "lapce-plugin"
git = "https://github.com/lapce/lapce-plugin-rust.git"
rev = "1657b855016c6bb50953e74eba4d079bf3173d63"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
